2003-09-17  Carlos Perelló Marín <carlos@gnome.org>

	* src/main.c: We use the "C" locale by default, when we start to use
	.po files we will change it at run time when needed.
	* src/status-version.c: /s/g_message/g_print/ and improbed the
	information output so it's easier to read.

2003-09-17  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-translation.c: msgfmt gives us the statistics with error
	output instead of standard output.
	* src/status-version.c: ditto. Also, we use now glib functions to read
	the po/ directory.
	Fixed also a missing strdup.

2003-09-17  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-translation.[ch]: Added to store the translation statistics
	* src/status-version.c: We create a hash table to store all
	translations for that version.
	* src/main.c: Recoded as UTF-8 and small change to the defaults
	settings

2003-08-05  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-version.[ch]: Fixed the .pot filename, it should be *.pot,
	no *.pot.pot :-P
	Implemented the .po update
	* src/main.c: We update the .po files for all modules/versions only
	if the download and the .pot generation works.
	* Time to implement the .po file information fetch :-P
	
2003-08-05  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-version.[ch]: Implemented the .pot regeneration
	* src/main.c: We regenerate now the .pot files and we don't need to
	know the .pot filename, we use directly our own name :-P

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-server.[ch], src/status-version.[ch]: Fixed to be able
	to download the CVS modules correctly.
	* src/main.c: Implemented the function to download all versions.
	* Next feature... .pot name discover!!!

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/*.c: Small bug-fixes, now it seems that works (the xml load).
	I will start now the .po management.

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* AUTHORS: Added with my name as required by automake.