@@ -1,0 +1,13 @@
+<head>
+  <title>The GNOME Translation Project</title>
+  <link rel="icon" type="image/png" href="/images/gnome-16.png" />
+  <link rel="stylesheet" type="text/css" href="/default.css" />
+  <link rel="stylesheet" type="text/css" href="/developer.css" />
+  <link rel="stylesheet" type="text/css" href="/projects/gtp/gtp.css" />
+  <style type="text/css">
+    #hdr {
+      background: url("/images/header-bg-mountains01.png") no-repeat;
+      background-color: #d6e7ff;
+    }
+  </style>
+</head>
